--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" rel="stylesheet"/>
-    <title>Vite + React + TS</title>
+    <title>Ngaodu Vietnam</title>
   </head>
   <body>
     <div id="root"></div>
